--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="vendor/webfontloader.js" type="text/javascript"></script>
 
         <!-- Src Files -->
+        <script src="src/prefabs/hud.js" type="text/javascript"></script>
         <script src="src/mechanics/player.js" type="text/javascript"></script>
         <script src="src/states/loading.js" type="text/javascript"></script>
         <script src="src/states/main_menu.js" type="text/javascript"></script>
