--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <!-- Src Files -->
         <script src="src/entities/player.js" type="text/javascript"></script>
         <script src="src/prefabs/hud.js" type="text/javascript"></script>
+        <script src="src/prefabs/bullet.js" type="text/javascript"></script>
         <script src="src/states/loading.js" type="text/javascript"></script>
         <script src="src/states/main_menu.js" type="text/javascript"></script>
         <script src="src/states/game.js" type="text/javascript"></script>
