--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <script src="src/entities/player_ship.js" type="text/javascript"></script>
         <script src="src/entities/bot.js" type="text/javascript"></script>
         <script src="src/entities/bots/minion.js" type="text/javascript"></script>
-        <script src="src/prefabs/hud.js" type="text/javascript"></script>
-        <script src="src/prefabs/bullet.js" type="text/javascript"></script>
+        <script src="src/objects/bullet.js" type="text/javascript"></script>
+        <script src="src/ui/hud.js" type="text/javascript"></script>
         <script src="src/states/loading.js" type="text/javascript"></script>
         <script src="src/states/main_menu.js" type="text/javascript"></script>
         <script src="src/states/game.js" type="text/javascript"></script>
