--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <script src="src/entities/bot.js" type="text/javascript"></script>
         <script src="src/entities/bots/minion.js" type="text/javascript"></script>
         <script src="src/objects/bullet.js" type="text/javascript"></script>
+        <script src="src/objects/projectile.js" type="text/javascript"></script>
+        <script src="src/objects/projectiles/projectile_main_gun.js" type="text/javascript"></script>
+        <script src="src/objects/weapon.js" type="text/javascript"></script>
+        <script src="src/objects/weapons/weapon_main_gun.js" type="text/javascript"></script>
         <script src="src/ui/hud.js" type="text/javascript"></script>
         <script src="src/states/loading.js" type="text/javascript"></script>
         <script src="src/states/main_menu.js" type="text/javascript"></script>
