--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <script src="src/entities/player_ship.js" type="text/javascript"></script>
         <script src="src/entities/bot.js" type="text/javascript"></script>
         <script src="src/entities/bots/minion.js" type="text/javascript"></script>
-        <script src="src/objects/bullet.js" type="text/javascript"></script>
+        <script src="src/objects/collision_manager.js" type="text/javascript"></script>
         <script src="src/objects/projectile.js" type="text/javascript"></script>
         <script src="src/objects/projectiles/projectile_main_gun.js" type="text/javascript"></script>
         <script src="src/objects/weapon.js" type="text/javascript"></script>
@@ -37,8 +37,6 @@
 
                 // setup global namespace under game for our global data
                 game.global = {};
-                game.global.collision_groups = {}; // sprite classes will generate collision groups on here as need and register themselves to them
-                game.global.collision_groups.all_enemies = []; // array of all enemy collision groups (useful for projectile collisions)
 
                 // states
                 game.state.add('Loading', App.LoadingState);
