--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!doctype html>
 <html>
     <head>
-        <meta charset="UTF-8" />
-        <title>Space Shooter</title>
+        <meta charset="UTF-7" />
+        <title>Interstice</title>
         <!-- Vendor Files -->
         <script src="vendor/phaser.js" type="text/javascript"></script>
-        <script src="vendor/lodash.min.js" type="text/javascript"></script>
+        <script src="vendor/lodash.js" type="text/javascript"></script>
         <script src="vendor/webfontloader.js" type="text/javascript"></script>
 
         <!-- Src Files -->
-        <script src="src/entities/player.js" type="text/javascript"></script>
-        <script src="src/entities/player_ship.js" type="text/javascript"></script>
-        <script src="src/entities/bot.js" type="text/javascript"></script>
-        <script src="src/entities/bots/minion.js" type="text/javascript"></script>
+        <script src="src/entities/ship.js" type="text/javascript"></script>
+        <script src="src/entities/ships/bot.js" type="text/javascript"></script>
+        <script src="src/entities/ships/bots/minion.js" type="text/javascript"></script>
+        <script src="src/entities/ships/player.js" type="text/javascript"></script>
         <script src="src/objects/collision_manager.js" type="text/javascript"></script>
         <script src="src/objects/projectile.js" type="text/javascript"></script>
         <script src="src/objects/projectiles/projectile_main_gun.js" type="text/javascript"></script>
@@ -24,29 +24,10 @@
         <script src="src/states/game.js" type="text/javascript"></script>
         <script src="src/states/play_mission.js" type="text/javascript"></script>
         <script src="src/states/mission_results.js" type="text/javascript"></script>
+
+        <!-- Run File -->
+        <script src="src/run.js" type="text/javascript"></script>
     </head>
     <body>
-        <script type="text/javascript">
-            var game = new Phaser.Game(800, 600);
-            Phaser.Device.whenReady(function () {
-                // plugins
-                this.game.__plugins = this.game.__plugins || {};
-
-                // add plugins here
-                // ...
-
-                // setup global namespace under game for our global data
-                game.global = {};
-
-                // states
-                game.state.add('Loading', App.LoadingState);
-                game.state.add('MainMenu', App.MainMenuState);
-                game.state.add('Game', App.GameState);
-                game.state.add('PlayMission', App.PlayMissionState);
-                game.state.add('MissionResults', App.MissionResultsState);
-
-                game.state.start('Loading');
-            });
-        </script>
     </body>
 </html>
