Added tiled map support (sectors)
Added lifespan to player and enemy bullets

Added simple map (sector 1)

Moved impact collisions into player object

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <script src="src/entities/ships/bot.js" type="text/javascript"></script>
         <script src="src/entities/ships/bots/minion.js" type="text/javascript"></script>
         <script src="src/entities/ships/player.js" type="text/javascript"></script>
+        <script src="src/map/sector.js" type="text/javascript"></script>
         <script src="src/objects/collision_manager.js" type="text/javascript"></script>
         <script src="src/objects/projectile.js" type="text/javascript"></script>
         <script src="src/objects/projectiles/projectile_minion_main_gun.js" type="text/javascript"></script>
