Add beinging scaffold for missions, moved a lot of mission setup into it

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <script src="src/entities/ships/bot.js" type="text/javascript"></script>
         <script src="src/entities/ships/bots/minion.js" type="text/javascript"></script>
         <script src="src/entities/ships/player.js" type="text/javascript"></script>
+        <script src="src/levels/mission.js" type="text/javascript"></script>
+        <script src="src/levels/objective.js" type="text/javascript"></script>
+        <script src="src/levels/missions/kill_minions.js" type="text/javascript"></script>
+        <script src="src/levels/objectives/kill_ships.js" type="text/javascript"></script>
         <script src="src/map/sector.js" type="text/javascript"></script>
         <script src="src/objects/collision_manager.js" type="text/javascript"></script>
         <script src="src/objects/projectile.js" type="text/javascript"></script>
@@ -24,7 +28,6 @@
         <script src="src/ui/hud.js" type="text/javascript"></script>
         <script src="src/states/loading.js" type="text/javascript"></script>
         <script src="src/states/main_menu.js" type="text/javascript"></script>
-        <script src="src/states/game.js" type="text/javascript"></script>
         <script src="src/states/play_mission.js" type="text/javascript"></script>
         <script src="src/states/mission_results.js" type="text/javascript"></script>
 
